dashboard panel cards completed

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,12 +2,18 @@
 $color-white: #fff;
 
 $color-gray: #9e9e9e;
+$color-gray-dark: #343a42;
 $color-gray-light: #ccc;
 
 $bg-navy-primary: #0f1522;
 $bg-navy-secondary: #192030;
 
 $bg-color-primary: #e0e0e0;
+
+$bg-dashboard-users: #8932cf;
+$bg-dashboard-orders: #2b68ec;
+$bg-dashboard-sell: #e92c81;
+$bg-dashboard-monthly: #23a7be;
 
 // fonts
 $font-family: "Poppins", sans-serif;
