--- a/sass/layout/_panel.scss
+++ b/sass/layout/_panel.scss
@@ -42,11 +42,73 @@
     }
 
     img {
-      background-color: darkred;
       width: 40px;
       height: 40px;
       border-radius: 50%;
       object-fit: cover;
+    }
+  }
+
+  &__title {
+    font-size: 24px;
+    font-weight: 700;
+    padding: 30px 30px 0 30px;
+    text-transform: capitalize;
+    color: $color-gray-dark;
+  }
+
+  &__values {
+    padding: 30px 30px 0 30px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  &__value {
+    width: 235px;
+    padding: 16px 20px;
+    border-radius: 5px;
+    background-color: $color-white;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    i {
+      font-size: 25px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      color: $color-white;
+      margin-right: 15px;
+      text-align: center; // for horizontal center
+      line-height: 60px; // for vertical center
+    }
+
+    &:nth-child(1) i {
+      background-color: $bg-dashboard-users;
+    }
+    &:nth-child(2) i {
+      background-color: $bg-dashboard-orders;
+    }
+    &:nth-child(3) i {
+      background-color: $bg-dashboard-sell;
+    }
+    &:nth-child(4) i {
+      background-color: $bg-dashboard-monthly;
+    }
+
+    h3 {
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    span {
+      font-size: 15px;
+      color: $color-gray-dark;
+      opacity: 0.8;
     }
   }
 }
