--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,54 @@ body {
       font-size: 18px;
       margin-right: 20px; }
     .panel__profile img {
-      background-color: darkred;
       width: 40px;
       height: 40px;
       border-radius: 50%;
       object-fit: cover; }
+  .panel__title {
+    font-size: 24px;
+    font-weight: 700;
+    padding: 30px 30px 0 30px;
+    text-transform: capitalize;
+    color: #343a42; }
+  .panel__values {
+    padding: 30px 30px 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap; }
+  .panel__value {
+    width: 235px;
+    padding: 16px 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
+    .panel__value i {
+      font-size: 25px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      color: #fff;
+      margin-right: 15px;
+      text-align: center;
+      line-height: 60px; }
+    .panel__value:nth-child(1) i {
+      background-color: #8932cf; }
+    .panel__value:nth-child(2) i {
+      background-color: #2b68ec; }
+    .panel__value:nth-child(3) i {
+      background-color: #e92c81; }
+    .panel__value:nth-child(4) i {
+      background-color: #23a7be; }
+    .panel__value h3 {
+      font-size: 18px;
+      font-weight: 600; }
+    .panel__value span {
+      font-size: 15px;
+      color: #343a42;
+      opacity: 0.8; }
 
 .sidebar {
   width: 300px;
