--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,15 @@
 // colors
 $color-white: #fff;
+$color-white-2: #f6f6f6;
 
 $color-gray: #9e9e9e;
 $color-gray-dark: #343a42;
 $color-gray-light: #ccc;
+
+$color-edit: #4407d3;
+
+$color-active: #1c1d1c;
+$bg-color-active: #5dff65;
 
 $bg-navy-primary: #0f1522;
 $bg-navy-secondary: #192030;
