some issues fixed and menu bar icon added

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 // colors
+$color-dark: #1c1d1c;
+
 $color-white: #fff;
 $color-white-2: #f6f6f6;
 
@@ -8,7 +10,6 @@ $color-gray-light: #ccc;
 
 $color-edit: #4407d3;
 
-$color-active: #1c1d1c;
 $bg-color-active: #5dff65;
 
 $bg-navy-primary: #0f1522;
