--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,32 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400; }
 
+#menu-btn {
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 20px;
+  color: #1c1d1c;
+  display: none; }
+
 .panel {
-  width: calc(100% - 300px); }
+  width: calc(100% - 300px);
+  margin-left: 300px;
+  position: relative; }
   .panel__navigation {
     padding: 15px 30px;
     border-bottom: 3px solid #0f1522;
     background-color: #fff;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: calc(100% - 300px);
+    z-index: 99; }
+  .panel__left {
+    display: flex;
+    justify-content: flex-start;
     align-items: center; }
   .panel__search {
     padding: 10px 15px;
@@ -57,7 +75,8 @@ body {
     font-weight: 700;
     padding: 30px 30px 0 30px;
     text-transform: capitalize;
-    color: #343a42; }
+    color: #343a42;
+    margin-top: 70px; }
   .panel__values {
     padding: 30px 30px 0 30px;
     display: flex;
@@ -149,7 +168,10 @@ body {
 .sidebar {
   width: 300px;
   height: 100%;
-  background-color: #0f1522; }
+  background-color: #0f1522;
+  position: fixed;
+  left: 0;
+  top: 0; }
   .sidebar__logo {
     color: #fff;
     padding: 30px 0 0 30px;
